<resources>
    <string name="app_name">AppLocker</string>
    <string name="action_settings">Settings</string>
    <string name="help_time_pin">Time based PIN code. For example time is 12:45 (24 hours) , PIN is 5421</string>
    <string name="select_lock_type">Select your lock type</string>
    <string name="wrong_pattern">Wrong Pattern</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="pin_not_exist">PIN Not Exist</string>
    <string name="security">Security</string>
    <string name="pattern">Pattern</string>
    <string name="apps">Applications</string>
    <string name="next">Next</string>
    <string name="enter_pattern">Draw your pattern</string>
    <string name="pin">PIN</string>
    <string name="date">Date</string>
    <string name="entered_successfully">Entered successfully</string>
    <string name="enter_failed">Wrong password</string>
    <string name="entered_app">App:</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="reset_locked_apps">Reset Locked Apps</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="reset_password">Reset Password</string>
    <string name="all_apps_locked">All apps locked</string>
    <string name="all_apps_unlocked">All apps unlocked</string>
    <string name="not_matched">Passwords not matched</string>
    <string name="slogan">Ever for better security</string>
    <string name="about">About</string>
    <string name="please_give_usage_Stats">Please give usage stats permission, we need this for locking apps.</string>
    <string name="pin_setted">PIN has been setted successfully</string>
    <string name="req">Please give device admin \n permission to prevent \n uninstall and keep privacy</string>
    <string name="uninstall_protect_is_active">Uninstall protect is active</string>
    <string name="uninstall_protect_is_not_active">Uninstall protect is not active.\n Tap to activate</string>

    <string name="intersetial_ad_unit_id" translatable="false">ca-app-pub-8840605642190960/2924931537</string>
    <string name="admob_banner" translatable="false">ca-app-pub-8840605642190960/1642148768</string>
    <string name="startapp_key" translatable="false">211654476</string>
    <string name="unity_id" translatable="false">1638402</string>
</resources>
