<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/s_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <ListView
        android:id="@+id/settings_list"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/settings_list"
        android:layout_margin="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/vName"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/vName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings_list"
        android:layout_alignStart="@+id/settings_list"
        android:layout_alignTop="@+id/imageView2"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15dp" />

</RelativeLayout>